<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txtPlayer1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txtScore1"
        app:layout_constraintEnd_toEndOf="@+id/txtPlayer1"
        app:layout_constraintStart_toStartOf="@+id/txtPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer1" />

    <TextView
        android:id="@+id/txtPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/txtPlayer2"
        app:layout_constraintBottom_toBottomOf="@+id/txtPlayer1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPlayer1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtScore2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtScore2"
        app:layout_constraintBottom_toBottomOf="@+id/txtScore1"
        app:layout_constraintEnd_toEndOf="@+id/txtPlayer2"
        app:layout_constraintStart_toStartOf="@+id/txtPlayer2"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer2" />

    <TextView
        android:id="@+id/txtInfoTable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:text="@string/txtInfoTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScore1" />

    <ImageButton
        android:id="@+id/imgBut1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/navalny"

        app:layout_constraintBottom_toTopOf="@+id/imgBut4"
        app:layout_constraintEnd_toStartOf="@+id/imgBut2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoTable" />

    <ImageButton
        android:id="@+id/imgBut2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imgBut5"
        app:layout_constraintEnd_toStartOf="@+id/imgBut3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut1"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoTable" />


    <ImageButton
        android:id="@+id/imgBut3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imgBut6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut2"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoTable" />

    <ImageButton
        android:id="@+id/imgBut4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imgBut7"
        app:layout_constraintEnd_toStartOf="@+id/imgBut5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBut1" />

    <ImageButton
        android:id="@+id/imgBut5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imgBut8"
        app:layout_constraintEnd_toStartOf="@+id/imgBut6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut4"
        app:layout_constraintTop_toBottomOf="@+id/imgBut2" />

    <ImageButton
        android:id="@+id/imgBut6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/imgBut9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut5"
        app:layout_constraintTop_toBottomOf="@+id/imgBut3" />

    <ImageButton
        android:id="@+id/imgBut7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/imgBut8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBut4" />

    <ImageButton
        android:id="@+id/imgBut8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/imgBut9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut7"
        app:layout_constraintTop_toBottomOf="@+id/imgBut5" />

    <ImageButton
        android:id="@+id/imgBut9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintHorizontal_weight="1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgBut8"
        app:layout_constraintTop_toBottomOf="@+id/imgBut6" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBut8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="494dp" />


</androidx.constraintlayout.widget.ConstraintLayout>